[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/main/Main.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://scenes/player/HedgehogGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/environment/TrackSegment.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/generation/TrackGenerator.gd" type="Script" id=5]
[ext_resource path="res://scripts/generation/ObstacleSpawner.gd" type="Script" id=6]
[ext_resource path="res://scripts/generation/CollectibleSpawner.gd" type="Script" id=7]
[ext_resource path="res://scenes/obstacles/ObstacleBase.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=9]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 15 )
fov = 60.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.408248, 0.57735, 0, 0.816497, 0.57735, -0.707107, -0.408248, 0.57735, 0, 10, 0 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="GameWorld" type="Spatial" parent="."]

[node name="HedgehogGroup" parent="GameWorld" instance=ExtResource( 3 )]

[node name="TrackGenerator" type="Spatial" parent="GameWorld"]
script = ExtResource( 5 )
track_segment_scene = ExtResource( 4 )

[node name="ObstacleSpawner" type="Spatial" parent="GameWorld"]
script = ExtResource( 6 )
obstacle_scene = ExtResource( 8 )

[node name="CollectibleSpawner" type="Spatial" parent="GameWorld"]
script = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 9 )]
